--- a/consultation.html
+++ b/consultation.html
@@ -331,11 +331,10 @@ Header Area
                 <div class="col-sm-6 col-xl-4">
                     <div class="testi-style1">
                         <div class="testi-content">
-                            <p class="testi-text">“ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam
-                                hendrerit nisi sed sollicitudin pellentesque. Nunc posuere purus rhoncus pulvinar ”</p>
+                            <p class="testi-text">“ Saya sangat puas dengan aplikasi Alodokter. Saya bisa konsultasi dengan dokter online kapan saja dan dimana saja tanpa perlu antri di rumah sakit. Saya juga bisa membaca artikel kesehatan terkini dan terlengkap, serta memesan obat dengan mudah. Obat.In adalah app kesehatan no.1 di Indonesia ”</p>
                         </div>
                         <div class="testi-client">
-                            <img src="assets/img/testimonial/testimonial-2-1.png" alt="author">
+                            <img src="assets/img/testimonial/testi1.jpg" alt="author">
                             <h3 class="testi-name h5">Moniqa</h3>
                             <span class="testi-degi">50 tahun , Gangguan Telinga</span>
                             <div class="testi-rating"><i class="fas fa-star"></i><i class="fas fa-star"></i><i
@@ -346,11 +345,10 @@ Header Area
                 <div class="col-sm-6 col-xl-4">
                     <div class="testi-style1">
                         <div class="testi-content">
-                            <p class="testi-text">“ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam
-                                hendrerit nisi sed sollicitudin pellentesque. Nunc posuere purus rhoncus pulvinar ”</p>
+                            <p class="testi-text">“ Obat.In adalah aplikasi kesehatan yang sangat bermanfaat bagi saya. Saya bisa chat dengan dokter berlisensi secara langsung dan mendapatkan resep obat yang sesuai. Obat.In adalah aplikasi kesehatan terfavorit di Indonesia ”</p>
                         </div>
                         <div class="testi-client">
-                            <img src="assets/img/testimonial/testimonial-2-2.png" alt="author">
+                            <img src="assets/img/testimonial/testi2.jpg" alt="author">
                             <h3 class="testi-name h5">Willimes</h3>
                             <span class="testi-degi">30 tahun , Kudis</span>
                             <div class="testi-rating"><i class="fas fa-star"></i><i class="fas fa-star"></i><i
@@ -361,11 +359,10 @@ Header Area
                 <div class="col-sm-6 col-xl-4">
                     <div class="testi-style1">
                         <div class="testi-content">
-                            <p class="testi-text">“ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam
-                                hendrerit nisi sed sollicitudin pellentesque. Nunc posuere purus rhoncus pulvinar ”</p>
+                            <p class="testi-text">“ Saya senang dengan aplikasi kesehatan yang saya gunakan. Saya bisa mendapatkan informasi kesehatan yang akurat dan terpercaya dari sumber yang berwenang. Saya juga bisa mengetahui berbagai tips dan trik untuk menjaga kesehatan tubuh dan pikiran. Aplikasi kesehatan ini adalah teman sehat saya sehari-hari. ”</p>
                         </div>
                         <div class="testi-client">
-                            <img src="assets/img/testimonial/testimonial-2-3.png" alt="author">
+                            <img src="assets/img/testimonial/testi3.jpg" alt="author">
                             <h3 class="testi-name h5">Silverster Scott</h3>
                             <span class="testi-degi">50 tahun, Sakit Jantung</span>
                             <div class="testi-rating"><i class="fas fa-star"></i><i class="fas fa-star"></i><i
@@ -376,11 +373,10 @@ Header Area
                 <div class="col-sm-6 col-xl-4">
                     <div class="testi-style1">
                         <div class="testi-content">
-                            <p class="testi-text">“ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam
-                                hendrerit nisi sed sollicitudin pellentesque. Nunc posuere purus rhoncus pulvinar ”</p>
+                            <p class="testi-text">“ Saya tertarik dengan sistem telemedika dan e-health yang dikembangkan di Indonesia. Saya bisa mendapatkan layanan kesehatan jarak jauh melalui teknologi informasi dan komunikasi. Saya bisa mengakses data rekam medis, hasil pemeriksaan, dan saran dari dokter secara online. Sistem telemedika dan e-health adalah solusi masa depan untuk kesehatan Indonesia ”</p>
                         </div>
                         <div class="testi-client">
-                            <img src="assets/img/testimonial/testimonial-2-4.png" alt="author">
+                            <img src="assets/img/testimonial/testi4.jpg" alt="author">
                             <h3 class="testi-name h5">Walter White</h3>
                             <span class="testi-degi">49 tahun, Kanker Kulit</span>
                             <div class="testi-rating"><i class="fas fa-star"></i><i class="fas fa-star"></i><i
