--- a/form-patient.html
+++ b/form-patient.html
@@ -185,7 +185,7 @@ Header Area
                             </select>
                         </div>
                         <div class="row text-center">
-                            <button type="submit" class="vs-btn" onclick="window.location.href = 'login.html'">Lanjut
+                            <button type="submit" class="vs-btn" onclick="window.location.href = 'chat.html'">Lanjut
                                 Chat</button>
                         </div>
                     </div>
