fix: send button on about

--- a/about.html
+++ b/about.html
@@ -327,6 +327,9 @@
                         <div class="form-group">
                             <textarea name="message" id="message" placeholder="Tulis Pesan"></textarea>
                         </div>
+                        <div class="text-center mb-30">
+                            <a href="" class="vs-btn  mt-2"><i class="far "></i>Kirim</a>
+                        </div>
                     </form>
                 </div>
             </div>
