--- a/form-patient.html
+++ b/form-patient.html
@@ -169,12 +169,12 @@ Header Area
                         <div class="form-group">
                             <label for="weight">Berat Badan:</label>
                             <input type="text" autocomplete="off" name="weight" id="weight"
-                                placeholder="Masukkan nama pasien">
+                                placeholder="Masukkan berat pasien">
                         </div>
                         <div class="form-group">
                             <label for="height">Tinggi Badan:</label>
                             <input type="text" autocomplete="off" name="height" id="height"
-                                placeholder="Masukkan nama pasien">
+                                placeholder="Masukkan tinggi pasien">
                         </div>
                         <div class="form-group">
                             <label for="pay">Bayar dengan:</label>
