--- a/consultation.html
+++ b/consultation.html
@@ -345,7 +345,7 @@ Header Area
                 <div class="col-sm-6 col-xl-4">
                     <div class="testi-style1">
                         <div class="testi-content">
-                            <p class="testi-text">“ Obat.In adalah aplikasi kesehatan yang sangat bermanfaat bagi saya. Saya bisa chat dengan dokter berlisensi secara langsung dan mendapatkan resep obat yang sesuai. Obat.In adalah aplikasi kesehatan terfavorit di Indonesia ”</p>
+                            <p class="testi-text">“ Saya senang dengan aplikasi kesehatan yang saya gunakan. Saya bisa mendapatkan informasi kesehatan yang akurat dan terpercaya dari sumber yang berwenang. Saya juga bisa mengetahui berbagai tips dan trik untuk menjaga kesehatan tubuh dan pikiran. Aplikasi kesehatan ini adalah teman sehat saya sehari-hari. ”</p>
                         </div>
                         <div class="testi-client">
                             <img src="assets/img/testimonial/testi2.jpg" alt="author">
