--- a/consultation.html
+++ b/consultation.html
@@ -331,7 +331,7 @@ Header Area
                 <div class="col-sm-6 col-xl-4">
                     <div class="testi-style1">
                         <div class="testi-content">
-                            <p class="testi-text">“ Saya sangat puas dengan aplikasi Alodokter. Saya bisa konsultasi dengan dokter online kapan saja dan dimana saja tanpa perlu antri di rumah sakit. Saya juga bisa membaca artikel kesehatan terkini dan terlengkap, serta memesan obat dengan mudah. Obat.In adalah app kesehatan no.1 di Indonesia ”</p>
+                            <p class="testi-text">“ Saya sangat puas dengan aplikasi Obat.In. Saya bisa konsultasi dengan dokter online kapan saja dan dimana saja tanpa perlu antri di rumah sakit. Saya juga bisa membaca artikel kesehatan terkini dan terlengkap, serta memesan obat dengan mudah. Obat.In adalah app kesehatan no.1 di Indonesia ”</p>
                         </div>
                         <div class="testi-client">
                             <img src="assets/img/testimonial/testi1.jpg" alt="author">
